--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,8 @@ body {
 .link {
   text-decoration: none;
   color: var(--secondary-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Псевдоклассы для всех ссылок */
@@ -148,11 +150,37 @@ header .logo-span {
 .contact-link {
   display: flex;
   align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .nav-list-item:not(:last-child),
 .cont-list-item:not(:last-child) {
   margin-right: 50px;
+}
+
+.nav-list-item {
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.current-page {
+  color: var(--accent-text-color);
+}
+
+.current-page:after {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 5px;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  background-color: var(--accent-text-color);
+  border-radius: 4px;
 }
 
 .nav a {
@@ -230,10 +258,19 @@ header .logo-span {
   z-index: 2;
 
   background-color: rgba(0, 0, 0, 0.4);
+
+  transform-origin: top;
+  transform: translatey(0);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
+  transform: scaley(0);
+  transform: translatey(-100%);
+
   pointer-events: none;
 }
 
@@ -251,6 +288,10 @@ header .logo-span {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  padding: 30px;
+  padding-top: 50px;
+  text-align: center;
 }
 
 .btn-modal-close {
@@ -481,6 +522,9 @@ header .logo-span {
   object-fit: contain;
   fill: var(--icon-basic-color);
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon-link:hover,
@@ -531,6 +575,9 @@ header .logo-span {
   height: 92px;
 
   fill: var(--icon-basic-color);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-button:hover,
@@ -564,6 +611,10 @@ header .logo-span {
 
   display: block;
   padding: 6px 22px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list {
@@ -608,6 +659,7 @@ header .logo-span {
 
 .thumb-img {
   position: relative;
+  overflow: hidden;
 }
 
 .card-disc {
@@ -624,7 +676,9 @@ header .logo-span {
 
   background-color: rgba(33, 150, 243, 0.9);
 
-  opacity: 0;
+  transform: translatey(100%);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-disc > p {
@@ -646,7 +700,8 @@ header .logo-span {
 
 .card:hover .card-disc,
 .card:focus .card-disc {
-  opacity: 1;
+  transform: translateY(0%);
+  transform: scale(1);
 }
 
 .projects h2 {
@@ -728,6 +783,9 @@ footer .logo {
   object-fit: contain;
   fill: var(--button-text-color);
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon-link:hover,
