--- a/css/styles.css
+++ b/css/styles.css
@@ -635,6 +635,11 @@ header .logo-span {
 
 /* Примеры работ */
 
+.portf-link {
+  text-decoration: none;
+  color: var(--primary-text-color);
+}
+
 .projects-list {
   display: flex;
   flex-wrap: wrap;
@@ -691,15 +696,15 @@ header .logo-span {
   color: #ffffff;
 }
 
-.card:hover,
-.card:focus {
+.portf-link:hover,
+.portf-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
 }
 
-.card:hover .card-disc,
-.card:focus .card-disc {
+.portf-link:hover .card-disc,
+.portf-link:focus .card-disc {
   transform: translateY(0%);
   transform: scale(1);
 }
